--- a/style.css
+++ b/style.css
@@ -45,6 +45,47 @@
     margin-bottom: 30px;
 }
 
-.line-spacing-top{
-    margin-top: 30px;
+#mission-div-h1 {
+    text-align: center;
+    font-size: 45px;
+    font-weight: 800;
+}
+
+.tro-width {
+    width: 33.33%;
+}
+
+.mission-vission {
+    width: 85%;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding: 3%;
+}
+
+.mission-vission img {
+    width: 40%;
+}
+
+#mission {
+    background-color: blanchedalmond;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-top: 3%;
+    border-radius: 10px;
+}
+
+#vission {
+    background-color: blanchedalmond;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-top: 3%;
+    border-radius: 10px;
+}
+
+#goals {
+    background-color: blanchedalmond;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-top: 3%;
+    border-radius: 10px;
 }
