--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 *{
-    margin-left: 30px;
     color: #18122E;
     font-family: 'Work Sans', sans-serif;
+}
+
+.top-section {
+    margin-left: 150px;
 }
 
 .top-headline {
@@ -39,10 +42,15 @@
 #headline-left-line {
     margin-top: 120px;
     border-left: 5px solid #D904A0;
+    padding-left: 20px;
 }
 
 .line-spacing-bottom{
     margin-bottom: 30px;
+}
+
+.tro-width {
+    width: 33.33%;
 }
 
 #mission-div-h1 {
@@ -51,14 +59,9 @@
     font-weight: 800;
 }
 
-.tro-width {
-    width: 33.33%;
-}
-
 .mission-vission {
     width: 85%;
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 90px;
     padding: 3%;
 }
 
@@ -67,25 +70,64 @@
 }
 
 #mission {
-    background-color: blanchedalmond;
+    background-color: aliceblue;
     margin-left: 2%;
     margin-right: 2%;
-    padding-top: 3%;
-    border-radius: 10px;
+    padding: 3%;
+    border-radius: 30px;
 }
 
 #vission {
-    background-color: blanchedalmond;
+    background-color: #f9eefc;
     margin-left: 2%;
     margin-right: 2%;
-    padding-top: 3%;
-    border-radius: 10px;
+    padding: 3%;
+    border-radius: 30px;
 }
 
 #goals {
     background-color: blanchedalmond;
     margin-left: 2%;
     margin-right: 2%;
+    padding: 3%;
+    border-radius: 30px;
+}
+
+.limitless-sky {
     padding-top: 3%;
-    border-radius: 10px;
+    margin-left: 150px;
+}
+
+.limitless-sky h1 {
+    margin-top: 60px;
+}
+
+#shape {
+    width: 25%;
+    position: absolute;
+    right: 950px;
+    z-index: 9;
+}
+
+#coding {
+    width: 80%;
+    position: relative;
+    z-index: 10;
+}
+
+#right-padding {
+    padding-right: 100px;
+}
+
+#project {
+    width: 80%;
+    position: relative;
+    z-index: 8;
+}
+
+#shape2 {
+    width: 25%;
+    position: absolute;
+    left: 800px;
+    z-index: 9;
 }
