--- a/style.css
+++ b/style.css
@@ -133,7 +133,6 @@ body {
 #shape2 {
     width: 25%;
     position: absolute;
-    left: 800px;
     z-index: 9;
 }
 
@@ -146,8 +145,9 @@ footer {
 }
 
 .welcome {
+    display: flex;
     width: 60%;
-    text-align: center;
+    text-align: justify;
     background-color: wheat;
     border-radius: 30px;
     margin: 0 auto;
@@ -157,5 +157,5 @@ footer {
 }
 
 .welcome img {
-    width: 30%;
+    width: 60%;
 }
